fix: adjust loading visibility and improve styling for table elements

--- a/src/styles.css
+++ b/src/styles.css
@@ -203,14 +203,14 @@ tbody {
 	display: table-row-group;
 }
 
-thead tr th {
+thead tr th, tbody tr td {
 	cursor: pointer;
-	padding: 0.5rem 0;
+	padding: 0.5em;
 }
 
 .crypto-index {
 	width: 5%;
-	padding: 0.5rem 0;
+	padding: 0.5em;
 }
 
 .crypto-name {
@@ -228,8 +228,8 @@ thead tr th {
 .crypto-details {
 	display: flex;
 	align-items: center;
-	gap: 0.5rem;
-	padding: 10px;
+	gap: 0.5em;
+	padding: .5em;
 }
 
 .crypto-image {
@@ -270,7 +270,6 @@ thead tr th {
 .skeleton-table {
 	display: flex;
 	flex-direction: column;
-	gap: 1rem;
 	max-width: 1200px;
 	margin: 0 5.25rem;
 	min-height: 100%;
@@ -285,16 +284,14 @@ thead tr th {
 .skeleton-body {
 	display: flex;
 	flex-direction: column;
-	gap: 0.5rem;
 }
 
 .skeleton-row {
 	display: grid;
 	grid-template-columns: 5% 45% 30% 20%;
 	align-items: center;
-	padding: 0.5rem 0;
+	padding: 0.5em;
 	min-height: 1.5rem;
-	row-gap: .5rem;
 	border-bottom: 1px solid lightgrey;
 	position: relative;
 }
